handle unknown resolutions