@@ -1,6 +1,11 @@
 package me.sayandas.video;
 
+import lombok.Getter;
+import me.sayandas.utils.LogUtils;
+
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -16,38 +21,54 @@ public enum VideoResolution {
     RES_240p(426, 240),
     RES_144p(256, 144);
 
+    @Getter
     private final int width;
+    @Getter
     private final int height;
-    private static Logger logger = Logger.getLogger(VideoResolution.class.getName());
+    private static final Logger log = LogUtils.getLoggerWithConsoleHandler(VideoResolution.class.getName());
 
     VideoResolution(int width, int height){
         this.width = width;
         this.height = height;
     }
 
-    public int getWidth(){
-        return this.width;
-    }
-
-    public int getHeight(){
-        return this.height;
-    }
-
     public static VideoResolution from(int width, int height){
         return Arrays.stream(VideoResolution.values())
                 .filter(res -> res.getWidth() == width && res.getHeight() == height)
                 .findFirst()
-                .orElseThrow(() -> new RuntimeException("Cannot resolve resolution"));
+                .orElseThrow(() -> new IllegalArgumentException("Cannot resolve resolution from width = " + width + " and height = " + height));
     }
 
-    public static List<VideoResolution> fetchAllResolutionsBelow(VideoResolution vidRes){
-        logger.log(Level.FINER, "Inside method fetchAllResolutionBelow. Input Resolution - " + vidRes);
-        List<VideoResolution> allResolutions = List.of(RES_144p, RES_240p, RES_360p, RES_480p, RES_720p, RES_1080p, RES_1440p, RES_2160p);
-        int index = allResolutions.indexOf(vidRes);
-        logger.log(Level.FINER, "Index of video resolution - " + index);
-        if(index == -1) throw new IllegalArgumentException("Resolution not supported");
-        if(index == 0) return List.of();
-        return allResolutions.subList(0, index);
+    public static List<VideoResolution> getTargetResolutions(VideoResolution res){
+        return getTargetResolutions(res.getWidth(), res.getHeight());
+    }
+
+    public static List<VideoResolution> getTargetResolutions(int width, int height){
+        VideoResolution vidRes = null;
+        boolean isStdRes = true;
+        List<VideoResolution> allResolutions = Arrays.asList(VideoResolution.values());
+        List<VideoResolution> targetResolutions = new ArrayList<>();
+        allResolutions.sort(Comparator.comparingInt(VideoResolution::getHeight));
+        int index;
+        // try to get standard resolution object
+        try{
+            vidRes = VideoResolution.from(width, height);
+        }catch(IllegalArgumentException ex){
+            isStdRes = false;
+        }
+        if(isStdRes) {
+            index = allResolutions.indexOf(vidRes);
+            targetResolutions.add(vidRes);
+        }else{
+            // find closest standard resolution and lower resolutions
+            index = allResolutions.size() - 1;
+            while(allResolutions.get(index).getHeight() > height){
+                index--;
+            }
+            index++;
+        }
+        targetResolutions.addAll(allResolutions.subList(0, index));
+        return targetResolutions;
     }
 
 }
